# mipviz

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/skills/: deploy.md
.github/workflows/: deploy-pages.yml
collections/: collection-v1.test.txt
scripts/: build_miplib_details.py  extract_benchmark_details.py  find_group_references.py  record-demo.mjs  render_chromaticindex.py  scrape_miplib_details.py
src/: lib.rs  model.rs
static/: CNAME  api.js  app.js  benchmark-12threads-details.json  benchmark-12threads.json  benchmark-instance.html  benchmarks.html  bound-chart.js  config.js  conflict.html  conflict.js  definitions.html  dirpicker.js  graph-notes.js  index.html  instances.html  lagrangian.js  matrix.html  matrix.js  mipviz_wasm.js  nav-search.js  solve-worker.js  style.css  theme.js  tour.js
wasm/: Cargo.toml  build.rs  build.sh
wasm/src/: lib.rs  mipviz_log.js
