[workspace]
members = [".", "wasm"]

[package]
name = "mipviz"
version = "0.1.0"
edition = "2024"

[dependencies]
lio-highs = { git = "https://github.com/mmghannam/lio-highs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scip-sys = { git = "https://github.com/scipopt/scip-sys", branch = "wasm", features = ["from-source"] }
numnom = "0.2.0"
